--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <nav>
 <ol>
-    <li><a href="index.html">About Us</a></li>
+    <li><a href="aboutus.html">About Us</a></li>
     <li><a href="celebritystyle.html">Celebrity Style</a></li>
     <li><a href="streetstyle.html">Street Style</a></li>
     <li><a href="models.html">Models</a></li>
@@ -109,6 +109,11 @@
           text-align: center;
         }
         </style>
+
+<div class="footer">
+    <p>Footer</p>
+  </div>
+
 
 </main>
 
